--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,8 +13,8 @@
 </head>
 <body>
 
-<header class="nav-header" id="top" >
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<header class="nav-header" id="top">
+  <nav class="navbar navbar-expand-lg navbar-light ">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Food, LLC</a>
     <button class="navbar-toggler d-lg-none d-md-none d-sm-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
